Clone detection with commit date taken into account (#131) (#172)